--- a/.github/workflows/hoge.yaml
+++ b/.github/workflows/hoge.yaml
@@ -18,4 +18,6 @@ jobs:
         webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
         color: "#48f442"
         username: "GitHub Bot"
-        args: The ${{ github.event_name }} event triggered.
+        args: |
+              The ${{ github.event_name }} event triggered.
+              4taku-frontendのプロダクション環境へのDeployが完了しました。
